Update peerDependencies to include axios

--- a/package.json
+++ b/package.json
@@ -26,15 +26,14 @@
   },
   "homepage": "https://github.com/PinkAirship/useDataFetch#readme",
   "peerDependencies": {
-    "react": ">=16.8.0 <18.0.0"
+    "react": ">=16.8.0 <18.0.0",
+    "axios": ">=0.21.1"
   },
   "publishConfig": {
     "access": "public"
   },
   "sideEffects": false,
-  "dependencies": {
-    "axios": "^0.21.1"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
@@ -43,6 +42,7 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@testing-library/react": "^11.2.3",
+    "axios": "^0.21.1",
     "axios-mock-adapter": "^1.19.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-transform-react-jsx": "^6.24.1",
