--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
+    "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "axios": "^0.21.1",
     "axios-mock-adapter": "^1.19.0",
@@ -54,9 +55,11 @@
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "eslint": "^7.19.0",
     "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-jest-dom": "^3.6.5",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-testing-library": "^3.10.1",
     "html-webpack-plugin": "^4.5.1",
     "jest": "^26.6.3",
     "nanoid": "^3.1.20",
