--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preversion": "npm test && npm run build",
     "postversion": "git push && git push --tags && npm publish --access public",
     "version:patch": "npm version patch",
+    "version:minor": "npm version minor",
+    "version:major": "npm version major",
     "prepublishOnly": "npm run build",
     "build": "rm -rf dist && webpack && cp LICENSE dist/LICENSE",
     "lint": "eslint .",
