--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "start": "webpack serve --config webpack.config.js --progress --profile --watch --content-base src/",
     "preversion": "npm test && npm run build",
     "postversion": "git push && git push --tags && npm publish --access public",
-    "version:patch": "npm version patch",
-    "version:minor": "npm version minor",
-    "version:major": "npm version major",
+    "publish:patch": "npm version patch && npm publish --access public",
+    "publish:minor": "npm version minor && npm publish --access public",
+    "publish:major": "npm version major && npm publish --access public",
     "prepublishOnly": "npm run build",
     "build": "rm -rf dist && webpack && cp LICENSE dist/LICENSE",
     "lint": "eslint .",
