Revert package.json publish changes
It was unclear what version did.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pinkairship/use-data-fetch",
-  "version": "3.1.0",
+  "version": "3.0.0",
   "description": "A data fetch hook that stays out of your way.",
   "main": "dist/index.js",
   "scripts": {
@@ -8,9 +8,9 @@
     "start": "webpack serve --config webpack.config.js --progress --profile --watch --content-base src/",
     "preversion": "npm test && npm run build",
     "postversion": "git push && git push --tags && npm publish --access public",
-    "publish:patch": "npm version patch && npm publish --access public",
-    "publish:minor": "npm version minor && npm publish --access public",
-    "publish:major": "npm version major && npm publish --access public",
+    "version:patch": "npm version patch",
+    "version:minor": "npm version minor",
+    "version:major": "npm version major",
     "prepublishOnly": "npm run build",
     "build": "rm -rf dist && webpack && cp LICENSE dist/LICENSE",
     "lint": "eslint .",
