--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "module": "dist/pinkairship-use-data-fetch.esm.js",
   "scripts": {
     "test": "jest",
-    "start": "webpack serve --config webpack.config.js --progress --profile --watch --content-base src/",
+    "start": "webpack serve --config webpack.config.js --progress --profile",
     "preversion": "npm test && npm run build",
     "postversion": "git push && git push --tags && npm publish --access public",
     "version:patch": "npm version patch",
@@ -35,8 +35,8 @@
   },
   "homepage": "https://github.com/PinkAirship/useDataFetch#readme",
   "peerDependencies": {
-    "react": ">=16.8.0 <18.0.0",
-    "axios": ">=0.21.1"
+    "axios": ">=0.21.1",
+    "react": ">=16.8.0 <18.0.0"
   },
   "publishConfig": {
     "access": "public"
@@ -75,7 +75,7 @@
     "react-dom": "^17.0.1",
     "webpack": "^5.18.0",
     "webpack-cli": "^4.4.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^4.9.3"
   },
   "resolutions": {
     "babel-core": "^7.0.0-bridge.0"
